--- a/src/main/webapp/paginas/usuario.xhtml
+++ b/src/main/webapp/paginas/usuario.xhtml
@@ -26,7 +26,7 @@
 				<f:facet name="footer">
 					<p:commandButton type="button"
 						action="#{controladorUsuario.persistir}" value="Salvar"
-						icon="ui-icon-check" />
+						icon="ui-icon-disk" />
 				</f:facet>
 			</p:panelGrid>
 		</h:form>
