--- a/src/main/webapp/paginas/usuario.xhtml
+++ b/src/main/webapp/paginas/usuario.xhtml
@@ -10,6 +10,11 @@
 	<ui:define name="content">
 
 		<h:form>
+			<h1>Módulo Controle de Acessos</h1>
+
+			<hr style="width: 95%"/>
+			<br />
+
 			<p:panelGrid columns="2">
 				<f:facet name="header">Dados do usuário</f:facet>
 				<h:outputText value="Nome" />
@@ -29,6 +34,11 @@
 						icon="ui-icon-disk" />
 				</f:facet>
 			</p:panelGrid>
+
+			<br />
+			<hr style="width: 95%"/>
+			<br />
+			
 		</h:form>
 
 	</ui:define>
