--- a/src/main/webapp/paginas/usuario.xhtml
+++ b/src/main/webapp/paginas/usuario.xhtml
@@ -12,7 +12,7 @@
 		<h:form>
 			<h1>Módulo Controle de Acessos</h1>
 
-			<hr style="width: 95%"/>
+			<hr style="width: 95%" />
 			<br />
 
 			<p:panelGrid columns="2">
@@ -29,16 +29,15 @@
 				<p:password value="#{usuario.senha}" />
 
 				<f:facet name="footer">
-					<p:commandButton type="button"
-						action="#{controladorUsuario.persistir}" value="Salvar"
-						icon="ui-icon-disk" />
+					<p:commandButton action="#{controladorUsuario.persistir}"
+						value="Salvar" icon="ui-icon-disk" />
 				</f:facet>
 			</p:panelGrid>
 
 			<br />
-			<hr style="width: 95%"/>
+			<hr style="width: 95%" />
 			<br />
-			
+
 		</h:form>
 
 	</ui:define>
